@@ -8,8 +8,8 @@ namespace leisure {
 	}
 
 #if !defined(LAUNCH_NO_HEDGEHOG)
-	void fmtin_deduce_auto(launch::hedgehog_elemproxy& proxy, std::istream& in) {
-		fmtin_deduce<int, long long, unsigned long long, double, bool>(proxy, in);
+	void fmtin_deduce_auto(launch::hedgehog& hh, size_t count, std::istream& in) {
+		fmtin_deduce<int, long long, unsigned long long, double, bool>(hh, count, in);
 	}
 #endif
 
