@@ -372,7 +372,12 @@ ced7bf7 Updated tests; fixed known bugs
 [v] Tests available
 [v] CMake available
 ===
-(HEAD!) Enhanced <hedgehog>
+23b138f Enhanced <hedgehog>
+[v] All existing modules functional
+[v] Tests available
+[v] CMake available
+===
+(HEAD!) Enhanced <exfmtio>; updated tests
 [v] All existing modules functional
 [v] Tests available
 [v] CMake available
